objects/Advertisement__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Budget__c</fullName>
        <label>Actual Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advertisement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertisement</label>
        <referenceTo>Advertisement__c</referenceTo>
        <relationshipLabel>ChildAdvertisement</relationshipLabel>
        <relationshipName>ChildAdvertisement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget_spent__c</fullName>
        <label>Estimated Budget spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expecting_Customer_Response__c</fullName>
        <label>Expecting Customer Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Advertisement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Advertisement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertisement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>